--- a/index.html
+++ b/index.html
@@ -3,20 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    
+    <title>GreenMixes | Carbon-Negative Concrete</title>
+    
+    <meta name="description" content="GreenMixes is building the future of construction with carbon-negative concrete solutions. Join us as we build a greener future. Launching soon." />
+    <meta name="author" content="GreenMixes" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://greenmixes.com/" />
+    <meta property="og:title" content="GreenMixes | Building the Future of Concrete" />
+    <meta property="og:description" content="Sustainable, carbon-negative concrete solutions for a greener planet. Launching soon." />
+    <meta property="og:image" content="https://greenmixes.com/src/assets/greenmixes-logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:url" content="https://greenmixes.com/" />
+    <meta name="twitter:title" content="GreenMixes | Carbon-Negative Concrete" />
+    <meta name="twitter:description" content="Building the future of sustainable construction. Launching soon." />
+    <meta name="twitter:image" content="https://greenmixes.com/src/assets/greenmixes-logo.png" />
+
+    <link rel="icon" type="image/png" href="/src/assets/greenmixes-logo.png" />
   </head>
 
   <body>
